--- a/css/carousel.css
+++ b/css/carousel.css
@@ -40,7 +40,7 @@ body {
 
 /* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
-  padding-top: 4rem;
+  /*padding-top: 4rem;*/
   margin-bottom: 1.5rem;
   text-align: center;
 }
@@ -52,6 +52,12 @@ body {
   margin-right: .75rem;
   margin-left: .75rem;
 }
+
+.marketing .jtron {
+  padding-top: 4rem;
+}
+
+
 /* rtl:end:ignore */
 
 
@@ -69,6 +75,7 @@ body {
   /* rtl:remove */
   letter-spacing: -.05rem;
 }
+
 
 
 /* RESPONSIVE CSS
